Add selectable feature

--- a/cppsrc/SerialChannel/SerialChannel/SerialChannel.vcxproj
+++ b/cppsrc/SerialChannel/SerialChannel/SerialChannel.vcxproj
@@ -81,6 +81,18 @@
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectName)$(PlatformArchitecture)</TargetName>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectName)$(PlatformArchitecture)</TargetName>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>C:\Program Files\Java\jdk1.7.0_75\include;C:\Program Files\Java\jdk1.7.0_75\include\win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>C:\Program Files\Java\jdk1.7.0_75\include;C:\Program Files\Java\jdk1.7.0_75\include\win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>C:\Program Files\Java\jdk1.7.0_75\include;C:\Program Files\Java\jdk1.7.0_75\include\win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>C:\Program Files\Java\jdk1.7.0_75\include;C:\Program Files\Java\jdk1.7.0_75\include\win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
@@ -101,6 +113,9 @@
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PreBuildEvent>
+      <Command>"c:\Program Files\Java\jdk1.7.0_75\bin\javah" -v -classpath ..\..\..\target\classes org.vesalainen.comm.channel.winx.WinSerialChannel</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -120,6 +135,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
     </Link>
+    <PreBuildEvent>
+      <Command>"c:\Program Files\Java\jdk1.7.0_75\bin\javah" -v -classpath ..\..\..\target\classes org.vesalainen.comm.channel.winx.WinSerialChannel</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -143,6 +161,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PreBuildEvent>
+      <Command>"c:\Program Files\Java\jdk1.7.0_75\bin\javah" -v -classpath ..\..\..\target\classes org.vesalainen.comm.channel.winx.WinSerialChannel</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -165,6 +186,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
+    <PreBuildEvent>
+      <Command>"c:\Program Files\Java\jdk1.7.0_75\bin\javah" -v -classpath ..\..\..\target\classes org.vesalainen.comm.channel.winx.WinSerialChannel</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -190,7 +214,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="jni.h" />
     <ClInclude Include="Ntddser.h" />
     <ClInclude Include="org_vesalainen_comm_channel_winx_WinSerialChannel.h" />
     <ClInclude Include="resource.h" />
