--- a/LinuxSerialChannel/makefile
+++ b/LinuxSerialChannel/makefile
@@ -3,7 +3,7 @@ JAVAH=$(JAVA_HOME)/bin/javah
 PROJECTDIR=/home/tkv/NetBeansProjects/SerialChannel
 JAVASRC=$(PROJECTDIR)/src/main/java
 RESOURCES=$(PROJECTDIR)/src/main/resources
-CFLAGS= -fPIC -I $(JAVA_HOME)/include -I $(JAVA_HOME)/include/linux
+CFLAGS= -pthread -fPIC -I $(JAVA_HOME)/include -I $(JAVA_HOME)/include/linux
 SOURCEDIR=$(PROJECTDIR)/LinuxSerialChannel
 CLASSPATH=$(PROJECTDIR)/target/classes
 HEADER=org_vesalainen_comm_channel_linux_LinuxSerialChannel.h
