--- a/cppsrc/.gitignore
+++ b/cppsrc/.gitignore
@@ -28,3 +28,25 @@ _manifest.rc
 *.bi
 *.sdf
 *.opensdf
+*.ncb
+*.suo
+*.old
+*.cd
+*.dll
+*.lib
+*.log
+*.dep
+*.htm
+*.lastbuildstate
+Upgrade*
+*.ipch
+*.pdb
+
+
+
+
+
+
+
+
+
