--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
     </description>
     <dependencies>
         <dependency>
+            <groupId>org.vesalainen</groupId>
+            <artifactId>util</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
