--- a/linux/makefile
+++ b/linux/makefile
@@ -1,14 +1,14 @@
 MACHINE=$(shell uname -m)
 JAVAH=$(JAVA_HOME)/bin/javah
 PROJECTDIR=..
-JAVASRC=$(PROJECTDIR)/src/main/java
-RESOURCES=$(PROJECTDIR)/src/main/resources
+JAVASRC=$(PROJECTDIR)/comm/src/main/java
+RESOURCES=$(PROJECTDIR)/comm/src/main/resources
 CFLAGS= -pthread -fPIC -I $(JAVA_HOME)/include -I $(JAVA_HOME)/include/linux
-SOURCEDIR=$(PROJECTDIR)/LinuxSerialChannel
-CLASSPATH=$(PROJECTDIR)/target/classes
-HEADER=org_vesalainen_comm_channel_linux_LinuxSerialChannel.h
-CLASSFILE=$(CLASSPATH)/org/vesalainen/comm/channel/linux/LinuxSerialChannel.class
-CLASS=org.vesalainen.comm.channel.linux.LinuxSerialChannel
+SOURCEDIR=$(PROJECTDIR)/linux
+CLASSPATH=$(PROJECTDIR)/comm/target/classes
+HEADER=org_vesalainen_comm_channel_LinuxSerialChannel.h
+CLASSFILE=$(CLASSPATH)/org/vesalainen/comm/channel/LinuxSerialChannel.class
+CLASS=org.vesalainen.comm.channel.LinuxSerialChannel
 
 $(HEADER):	$(CLASSFILE)
 	$(JAVAH) -v -d $(SOURCEDIR) -cp $(CLASSPATH) $(CLASS)
