--- a/javaxcomm/pom.xml
+++ b/javaxcomm/pom.xml
@@ -6,7 +6,7 @@
         <version>1.0.1</version>
     </parent>    
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.vesalainen</groupId>
+    <groupId>org.vesalainen.comm</groupId>
     <artifactId>javaxcomm</artifactId>
     <version>1.0.0</version>
     <name>javax.comm</name>
