C-memory fee call now in finalize method wakeupSelect recoded

--- a/linux/makefile
+++ b/linux/makefile
@@ -3,7 +3,7 @@ JAVAH=$(JAVA_HOME)/bin/javah
 PROJECTDIR=..
 JAVASRC=$(PROJECTDIR)/comm/src/main/java
 RESOURCES=$(PROJECTDIR)/comm/src/main/resources
-CFLAGS= -pthread -fPIC -I $(JAVA_HOME)/include -I $(JAVA_HOME)/include/linux
+CFLAGS= -g -pthread -fPIC -I $(JAVA_HOME)/include -I $(JAVA_HOME)/include/linux
 SOURCEDIR=$(PROJECTDIR)/linux
 CLASSPATH=$(PROJECTDIR)/comm/target/classes
 HEADER=org_vesalainen_comm_channel_LinuxSerialChannel.h
