--- a/linux/Makefile
+++ b/linux/Makefile
@@ -6,7 +6,7 @@ RESOURCES=$(PROJECTDIR)/comm/src/main/resources
 CFLAGS=$(shell dpkg-buildflags --get CFLAGS) -I . #-g -pthread -fPIC -I .
 LDFLAGS=$(shell dpkg-buildflags --get LDFLAGS)
 SOURCEDIR=$(PROJECTDIR)/linux
-CLASSPATH=$(PROJECTDIR)/comm/target/classes
+CLASSPATH=/opt/org.vesalainen.nmea/nmea-router/jar/org/vesalainen/comm/1.0.4/comm-1.0.4.jar
 HEADER=org_vesalainen_comm_channel_LinuxSerialChannel.h
 CLASSFILE=$(CLASSPATH)/org/vesalainen/comm/channel/LinuxSerialChannel.class
 CLASS=org.vesalainen.comm.channel.LinuxSerialChannel
@@ -22,3 +22,5 @@ distclean:
 	rm *.o
 	rm *.so
 
+header:
+	javah -d . -v -cp $(CLASSPATH) $(CLASS)
